feat: library of music

--- a/index.html
+++ b/index.html
@@ -38,8 +38,26 @@
                     </li>
                 </ul>
             </div>
+
+
+        </nav><!--- nav serve para criar uma barra de navegação -->
+
+        <nav class="library">
+            <div class="header">
+                <span class="fa fa-book"></span>
+                <span>Sua Biblioteca</span>
+                <span class="fa fa-plus"></span>
+            </div>
+            <br>
+            <div class="playlist">
+                <h1>Vai existir uma playlist</h1>
+            </div>
+            <br>
+            <div class="language">
+                <h2>Trocar lingua</h2>
+            </div>
+
         </nav>
-        <!--- nav serve para criar uma barra de navegação -->
     </div>
 </body>
 
