feat: add footer

--- a/index.html
+++ b/index.html
@@ -72,6 +72,21 @@
             </div>
         </div>
     </div>
+    <div class="footer">
+        <footer class="footer__content">
+            <span class="text">TESTAR O PREMIUM DE GRAÇA</span>
+            <span class="text">Inscreva-se paa curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão
+                de crédito</span>
+            </footer>
+            <button class="footer__button">
+                <a href="">
+                    <span>
+                        Inscreva-se grátis
+                    </span>
+                </a>
+            </button>
+    </div>
+
 </body>
 
 </html>
