--- a/index.html
+++ b/index.html
@@ -73,20 +73,18 @@
             </div>
         </div>
     </div>
-    <div class="footer">
-        <footer class="footer__content">
-            <span class="text">TESTAR O PREMIUM DE GRAÇA</span>
-            <span class="text">Inscreva-se paa curtir música ilimitada e podcasts só com alguns anúncios. Não precisa de cartão
-                de crédito</span>
-            </footer>
-            <button class="footer__button">
-                <a href="">
-                    <span>
-                        Inscreva-se grátis
-                    </span>
-                </a>
-            </button>
-    </div>
+    <footer class="disclaimer-premium">
+        <div class="text">
+            <p class="disclaimer-premium__title">Testar o Premium de graça</p>
+            <p class="disclaimer-premium__subtitle">
+                Inscreva-se para curtir música ilimitada e podcasts só com alguns
+                anúncios. Não precisa de cartão de crédito.
+            </p>
+        </div>
+        <div class="button">
+            <button type="button">Inscreva-se grátis</button>
+        </div>
+    </footer>
 
 </body>
 
